--- a/app/styles.less
+++ b/app/styles.less
@@ -6,6 +6,14 @@
 @import "styles/helpers.less";
 @import "styles/reset.less";
 
+body {
+  background-color: @mainLight95;
+}
+
+.red {
+  outline: 1px solid red;
+}
+
 .stoich-section {
   border: 1px solid @main;
   border-radius: 2px;
